Fix margins on iphone

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -231,7 +231,7 @@ article .links ul {
     margin-left: 0;
   }
 
-  .show-nav article {
+  .show-nav section {
     margin-right: -100%;
     margin-left: 240px;
   }
